# digest-xxhash

./: Build.pm  META.info  Makefile  README.md
src/: CMakeLists.txt  version.c  xxHash.pm.in
t/: 01-compare-correct.t  02-version.t
